# sph

./: .gitignore  .parallel_strategy.md  .system_prompt.md  CMakeLists.txt  TODO.md  build_project.sh  openmp_test  run.sh  run_cluster.sh  setup_env.sh  speedup_techniques.md
.cache/clangd/index/: Grid.cpp.63A5F8FF2A1479B1.idx  Grid.hpp.521CFE43F472D185.idx  Particle.cpp.1B8FA0DEA7514D91.idx  Particle.hpp.4AD9C02D159E4866.idx  ParticleSystem.cpp.5F729DC1E7C8D1B7.idx  ParticleSystem.hpp.EA254D2CF80A5D8C.idx  Renderer.cpp.54434DFE6A057D59.idx  Renderer.hpp.62969B3D8716304C.idx  SPHConfig.hpp.CBC4970E68811DDB.idx  SPHPhysics.cpp.6AE4EAC53D6E781D.idx  SPHPhysics.hpp.C975CAF551B831C3.idx  SPHSimulation.cpp.34886B9015220728.idx  SPHSimulation.hpp.0E935FA5BAD8892D.idx  main.cpp.2E2DA340AEAA141C.idx
.prompt/: .parallel_strategy.md  .system_prompt.md
build_headless/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  sph_simulation
diagram/: architecture.md
include/: Grid.hpp  ParallelExecutor.hpp  Particle.hpp  ParticleSystem.hpp  Renderer.hpp  SPHConfig.hpp  SPHPhysics.hpp  SPHSimulation.hpp  SPHSolver.hpp
include/parallel/: AdaptiveDomainDecomposer.hpp  BoundaryManager.hpp  DomainDecomposer.hpp  GridDomainDecomposer.hpp  LoadBalancer.hpp  ParallelSPHSolver.hpp  SimpleLoadBalancer.hpp  SpaceFillingCurveDecomposer.hpp  Subdomain.hpp
src/: Grid.cpp  ParallelExecutor.cpp  Particle.cpp  ParticleSystem.cpp  Renderer.cpp  SPHPhysics.cpp  SPHSimulation.cpp  SPHSolver.cpp  main.cpp
src/parallel/: BoundaryManager.cpp  GridDomainDecomposer.cpp  SimpleLoadBalancer.cpp  Subdomain.cpp
